Closed
Bug 1826853
Opened 3 years ago
Closed 3 years ago
[CtW][tail-end] Sync call RemoteAccessible::CaretLineNumber() is still used in MacOS
Categories
(Core :: Disability Access APIs, defect)
Tracking
()
RESOLVED
FIXED
115 Branch
People
(Reporter: eeejay, Assigned: eeejay)
References
Details
Attachments
(1 file)
|
48 bytes,
text/x-phabricator-request
|
pascalc
:
approval-mozilla-beta+
|
Details | Review |
A non sync or cache alternative should be used.
Updated•3 years ago
|
Severity: -- → S3
Comment 1•3 years ago
|
||
When does VoiceOver actually use this? It seems we've never implemented this correctly. Due to a typo, RemoteAccessible::CaretLineNumber actually gets the caret offset! Furthermore, I couldn't find any way to get the current line number with VO, even in Safari.
Flags: needinfo?(eitan)
| Assignee | ||
Comment 2•3 years ago
|
||
This obviously doesn't work. I do see this implemented in WK and Blink. I think this can be done with the cached selection and line boundaries. I'll take this.
Flags: needinfo?(eitan)
Updated•3 years ago
|
Assignee: nobody → eitan
Status: NEW → ASSIGNED
| Assignee | ||
Comment 3•3 years ago
|
||
Pushed by eisaacson@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/28c49102780c
Add a caching version of CaretLineNumber and fix sync version. r=Jamie
Comment 5•3 years ago
|
||
| bugherder | ||
Status: ASSIGNED → RESOLVED
Closed: 3 years ago
status-firefox115:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → 115 Branch
Comment 6•3 years ago
|
||
Comment on attachment 9331651 [details]
Bug 1826853 - Add a caching version of CaretLineNumber and fix sync version. r?Jamie!
Beta/Release Uplift Approval Request
- User impact if declined: Incorrect caret line number reported by Mac a11y tools. Also needed to uplift bug 1830466.
- Is this code covered by automated tests?: Yes
- Has the fix been verified in Nightly?: No
- Needs manual test from QE?: No
- If yes, steps to reproduce:
- List of other uplifts needed: None
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): Only affects a11y exposure of caret line number. Covered by automated tests.
- String changes made/needed:
- Is Android affected?: No
Attachment #9331651 -
Flags: approval-mozilla-beta?
Comment 7•3 years ago
|
||
Comment on attachment 9331651 [details]
Bug 1826853 - Add a caching version of CaretLineNumber and fix sync version. r?Jamie!
Approved for 114 beta 5, thanks.
Attachment #9331651 -
Flags: approval-mozilla-beta? → approval-mozilla-beta+
Comment 8•3 years ago
|
||
| bugherder uplift | ||
status-firefox114:
--- → fixed
You need to log in
before you can comment on or make changes to this bug.
Description
•