Bug 1826853 - Add a caching version of CaretLineNumber and fix sync version. r=Jamie

Differential Revision: https://phabricator.services.mozilla.com/D177190