accessible/ipc/RemoteAccessibleShared.h
@@ -55,7 +55,6 @@ void ScrollToPoint(uint32_t aScrollType, int32_t aX, int32_t aY);
 
 void Announce(const nsString& aAnnouncement, uint16_t aPriority);
 
-int32_t CaretLineNumber();
 virtual int32_t CaretOffset() const override;
 
 virtual void TextSubstring(int32_t aStartOffset, int32_t aEndOfset,
